Demonstration/Ingress-Controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: dev
spec:
  tls:
   - hosts:
      - token.noteziee.cloud
     secretName: token.noteziee.cloud
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: routing-service
            port:
              number: 8008
